@@ -1,5 +1,6 @@
 package com.dpw.runner.shipment.services.aspects.PermissionsValidationAspect;
 
+import com.dpw.runner.shipment.services.entity.ConsolidationDetails;
 import com.dpw.runner.shipment.services.entity.ShipmentDetails;
 import com.dpw.runner.shipment.services.exception.exceptions.RunnerException;
 import com.dpw.runner.shipment.services.utils.V1PermissionMapUtil;
@@ -45,19 +46,71 @@ public class RetrieveValidateAspect {
                     continue;
                 List<String> parameterList = Arrays.stream(getPermissionName(permission).toLowerCase().split(DELIMITER))
                         .filter(e -> !e.contains("retrieve"))
-                        .collect(Collectors.toList());
+                        .toList();
                 String validTransportMode = getParameterFromPermission(TRANSPORT_MODE_INDEX, parameterList);
                 String validDirection = getParameterFromPermission(DIRECTION_INDEX, parameterList);
                 String validShipmentType = getParameterFromPermission(SHIPMENT_TYPE_INDEX, parameterList);
                 String validDomesticType = getParameterFromPermission(IS_DOMESTIC_INDEX, parameterList);
 
-                if(validTransportMode.equals(ALL) || transportMode != null && transportMode.equals(validTransportMode)){
+                if(validTransportMode.equals(ALL) || transportMode == null || transportMode.equals(validTransportMode)){
                     validatedFields.add("transportMode");
-                    if(validDirection.equals(ALL) || direction != null && direction.equals(validDirection)){
+                    if(validDirection.equals(ALL) || direction == null || direction.equals(validDirection)){
                         validatedFields.add("direction");
-                        if(validShipmentType.equals(ALL) || shipmentType != null && shipmentType.equals(validShipmentType)){
+                        if(validShipmentType.equals(ALL) || shipmentType == null || shipmentType.equals(validShipmentType)){
                             validatedFields.add("shipmentType");
-                            if(validDomesticType.equals(ALL) || domesticType != null && domesticType.equals(validDomesticType.equals(DOMESTIC))){
+                            if(validDomesticType.equals(ALL) || domesticType == null || domesticType.equals(validDomesticType.equals(DOMESTIC))){
+                                validatedFields.add("domesticType");
+                            }
+                        }
+                    }
+                }
+                if(validatedFields.size() == retrieveValidationFields)
+                    return;
+            }
+
+            if (validatedFields.size() < retrieveValidationFields)
+                throw new RunnerException("Unavailable to retrieve record due to insufficient retrieve permissions");
+        }
+    }
+
+    @AfterReturning(pointcut="execution(* com.dpw.runner.shipment.services.dao.impl.ConsolidationDao.findById(..)) && args(Long)",
+            returning="consolidation")
+    public void validateConsolidationRetrieve(Optional<ConsolidationDetails> consolidation) throws RunnerException {
+        log.info("Validating Retrieve permissions on consolidation entity");
+        List<String> userPermissions = PermissionsContext.getPermissions(CONSOLIDATION_RETRIEVE_PERMISSION);
+        int retrieveValidationFields = 4;
+        Set<String> validatedFields = new HashSet<>();
+        if(consolidation.isPresent()){
+            String transportMode = null, direction = null, shipmentType = null;
+            Boolean domesticType = null;
+            if(consolidation.get().getTransportMode() != null)
+                transportMode = consolidation.get().getTransportMode().toLowerCase();
+            if(consolidation.get().getShipmentType() != null)
+                direction = consolidation.get().getShipmentType().toLowerCase();
+            if(consolidation.get().getContainerCategory() != null)
+                shipmentType = consolidation.get().getContainerCategory().toLowerCase();
+            if(consolidation.get().getIsDomestic() != null)
+                domesticType = consolidation.get().getIsDomestic();
+
+            for (String permission : userPermissions){
+                String v1MappedPermission = V1PermissionMapUtil.getPermissionName(permission);
+                if(v1MappedPermission == null)
+                    continue;
+                List<String> parameterList = Arrays.stream(getPermissionName(permission).toLowerCase().split(DELIMITER))
+                        .filter(e -> !e.contains("retrieve"))
+                        .toList();
+                String validTransportMode = getParameterFromPermission(TRANSPORT_MODE_INDEX, parameterList);
+                String validDirection = getParameterFromPermission(DIRECTION_INDEX, parameterList);
+                String validShipmentType = getParameterFromPermission(SHIPMENT_TYPE_INDEX, parameterList);
+                String validDomesticType = getParameterFromPermission(IS_DOMESTIC_INDEX, parameterList);
+
+                if(validTransportMode.equals(ALL) || transportMode == null || transportMode.equals(validTransportMode)){
+                    validatedFields.add("transportMode");
+                    if(validDirection.equals(ALL) || direction == null || direction.equals(validDirection)){
+                        validatedFields.add("direction");
+                        if(validShipmentType.equals(ALL) || shipmentType == null || shipmentType.equals(validShipmentType)){
+                            validatedFields.add("shipmentType");
+                            if(validDomesticType.equals(ALL) || domesticType == null || domesticType.equals(validDomesticType.equals(DOMESTIC))){
                                 validatedFields.add("domesticType");
                             }
                         }
