@@ -1,17 +1,22 @@
 package com.dpw.runner.shipment.services.dao.impl;
 
-import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.TenantContext;
+import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.ShipmentSettingsDetailsContext;
 import com.dpw.runner.shipment.services.commons.constants.Constants;
 import com.dpw.runner.shipment.services.commons.constants.DaoConstants;
 import com.dpw.runner.shipment.services.commons.constants.ShipmentConstants;
 import com.dpw.runner.shipment.services.commons.requests.ListCommonRequest;
 import com.dpw.runner.shipment.services.commons.requests.SortRequest;
-import com.dpw.runner.shipment.services.dao.interfaces.*;
+import com.dpw.runner.shipment.services.dao.interfaces.IConsolidationDetailsDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IMawbStocksDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IMawbStocksLinkDao;
+import com.dpw.runner.shipment.services.dao.interfaces.IShipmentDao;
 import com.dpw.runner.shipment.services.dto.GeneralAPIRequests.CarrierListObject;
 import com.dpw.runner.shipment.services.dto.v1.response.V1DataResponse;
 import com.dpw.runner.shipment.services.entity.*;
 import com.dpw.runner.shipment.services.entity.commons.BaseEntity;
 import com.dpw.runner.shipment.services.entity.enums.LifecycleHooks;
+import com.dpw.runner.shipment.services.entity.enums.ShipmentStatus;
+import com.dpw.runner.shipment.services.exception.exceptions.RunnerException;
 import com.dpw.runner.shipment.services.exception.exceptions.ValidationException;
 import com.dpw.runner.shipment.services.helpers.JsonHelper;
 import com.dpw.runner.shipment.services.masterdata.request.CommonV1ListRequest;
@@ -25,6 +30,7 @@ import com.dpw.runner.shipment.services.utils.CommonUtils;
 import com.dpw.runner.shipment.services.utils.StringUtility;
 import com.dpw.runner.shipment.services.validator.ValidatorUtility;
 import com.nimbusds.jose.util.Pair;
+import io.netty.util.internal.StringUtil;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataRetrievalFailureException;
@@ -32,17 +38,21 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Repository;
+import org.springframework.transaction.annotation.Transactional;
 
+import javax.validation.ConstraintViolationException;
+import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.*;
 
 import static com.dpw.runner.shipment.services.helpers.DbAccessHelper.fetchData;
-import static com.dpw.runner.shipment.services.utils.CommonUtils.IsStringNullOrEmpty;
-import static com.dpw.runner.shipment.services.utils.CommonUtils.constructListCommonRequest;
+import static com.dpw.runner.shipment.services.utils.CommonUtils.*;
 
 @Repository
 @Slf4j
 public class ShipmentDao implements IShipmentDao {
+    public static final String CONSUMED = "Consumed";
+    public static final String UNUSED = "Unused";
     @Autowired
     private IShipmentRepository shipmentRepository;
 
@@ -64,8 +74,6 @@ public class ShipmentDao implements IShipmentDao {
     @Autowired
     private IConsolidationDetailsDao consolidationDetailsDao;
 
-    @Autowired
-    private IShipmentSettingsDao shipmentSettingsDao;
 
     @Autowired
     private IMawbStocksDao mawbStocksDao;
@@ -77,7 +85,7 @@ public class ShipmentDao implements IShipmentDao {
     private IV1Service v1Service;
 
     @Override
-    public ShipmentDetails save(ShipmentDetails shipmentDetails, boolean fromV1Sync) {
+    public ShipmentDetails save(ShipmentDetails shipmentDetails, boolean fromV1Sync) throws RunnerException {
         Set<String> errors = validatorUtility.applyValidation(jsonHelper.convertToJson(shipmentDetails) , Constants.SHIPMENT, LifecycleHooks.ON_CREATE, false);
         ShipmentDetails oldShipment = null;
         if(shipmentDetails.getId() != null){
@@ -102,12 +110,18 @@ public class ShipmentDao implements IShipmentDao {
             if(shipmentDetails.getContainersList() == null)
                 shipmentDetails.setContainersList(new ArrayList<>());
         }
-        onSave(shipmentDetails, errors, oldShipment, fromV1Sync);
+        try {
+            onSave(shipmentDetails, errors, oldShipment, fromV1Sync);
+        } catch (Exception e){
+            String errorMessage = e.getMessage();
+            if(e.getClass().equals(ConstraintViolationException.class))
+                errorMessage = getConstrainViolationErrorMessage(e);
+            throw new RunnerException(errorMessage);
+        }
         return shipmentDetails;
     }
 
-    public List<ShipmentDetails> saveAll(List<ShipmentDetails> shipments)
-    {
+    public List<ShipmentDetails> saveAll(List<ShipmentDetails> shipments) throws RunnerException {
         List<ShipmentDetails> res = new ArrayList<>();
         for(ShipmentDetails req : shipments){
             req = save(req, false);
@@ -118,14 +132,14 @@ public class ShipmentDao implements IShipmentDao {
 
     @Override
     public ShipmentDetails update(ShipmentDetails shipmentDetails, boolean fromV1Sync) {
-        validateLockStatus(shipmentDetails.getId());
+        validateLockStatus(shipmentDetails);
         Set<String> errors = validatorUtility.applyValidation(jsonHelper.convertToJson(shipmentDetails) , Constants.SHIPMENT, LifecycleHooks.ON_CREATE, false);
         ShipmentDetails oldShipment = null;
         if(shipmentDetails.getId() != null){
             long id = shipmentDetails.getId();
             Optional<ShipmentDetails> oldEntity = findById(id);
             if (!oldEntity.isPresent()) {
-                log.debug("Container is null for Id {}", shipmentDetails.getId());
+                log.debug("Shipment is null for Id {}", shipmentDetails.getId());
                 throw new DataRetrievalFailureException(DaoConstants.DAO_DATA_RETRIEVAL_FAILURE);
             }
             if(shipmentDetails.getContainersList() == null) {
@@ -141,16 +155,52 @@ public class ShipmentDao implements IShipmentDao {
         return shipmentDetails;
     }
 
-    private void onSave(ShipmentDetails shipmentDetails, Set<String> errors, ShipmentDetails oldShipment, boolean fromV1Sync)
-    {
+    private void onSave(ShipmentDetails shipmentDetails, Set<String> errors, ShipmentDetails oldShipment, boolean fromV1Sync) {
+        if (!StringUtil.isNullOrEmpty(shipmentDetails.getHouseBill()) && (oldShipment != null && !Objects.equals(oldShipment.getStatus(), shipmentDetails.getStatus())) &&
+                Objects.equals(shipmentDetails.getStatus(), ShipmentStatus.Cancelled.getValue())) {
+            ShipmentSettingsDetails tenantSettings = ShipmentSettingsDetailsContext.getCurrentTenantSettings();
+            if (tenantSettings != null) {
+                String suffix = tenantSettings.getCancelledBLSuffix();
+                if (suffix != null) {
+                    String newHouseBill = shipmentDetails.getHouseBill() + suffix;
+                    shipmentDetails.setHouseBill(newHouseBill);
+                }
+            }
+        }
+        if(!StringUtil.isNullOrEmpty(shipmentDetails.getHouseBill()))
+            shipmentDetails.setHouseBill(shipmentDetails.getHouseBill().trim());
+        if(!StringUtil.isNullOrEmpty(shipmentDetails.getMasterBill()))
+            shipmentDetails.setMasterBill(shipmentDetails.getMasterBill().trim());
         errors.addAll(applyShipmentValidations(shipmentDetails, oldShipment));
-        if (! errors.isEmpty())
-            throw new ValidationException(errors.toString());
-        if (!fromV1Sync && shipmentDetails.getTransportMode().equals("AIR") && shipmentDetails.getShipmentType().equals("DRT"))
-            directShipmentMAWBCheck(shipmentDetails);
+        if (!errors.isEmpty())
+            throw new ValidationException(String.join(",", errors));
+        if (shipmentDetails.getTransportMode() != null && shipmentDetails.getCarrierDetails() != null) {
+            LocalDateTime eta = shipmentDetails.getCarrierDetails().getEta();
+            LocalDateTime etd = shipmentDetails.getCarrierDetails().getEtd();
+            if (shipmentDetails.getTransportMode().equals(Constants.TRANSPORT_MODE_AIR)) {
+                //for air shipment, ETA can be less than ETD
+                if (eta != null && etd != null && eta.isBefore(etd)) {
+                    Duration duration = Duration.between(eta, etd);
+                    if (Math.abs(duration.toHours()) > 24) {
+                        throw new ValidationException("Difference between ETA and ETD should not be more than 24 hours");
+                    }
+                }
+            } else {
+                //for other transport modes other than AIR, ETA cannot be less than ETD
+                if (eta != null && etd != null && eta.isBefore(etd)) {
+                    throw new ValidationException("ETA should not be less than ETD");
+                }
+            }
+        }
+        if (!fromV1Sync && shipmentDetails.getTransportMode().equals(Constants.TRANSPORT_MODE_AIR)
+                && shipmentDetails.getJobType() != null && shipmentDetails.getJobType().equals(Constants.SHIPMENT_TYPE_DRT))
+            directShipmentMAWBCheck(shipmentDetails, oldShipment != null ? oldShipment.getMasterBill() : null);
+
+        validateIataCode(shipmentDetails);
+
         shipmentDetails = shipmentRepository.save(shipmentDetails);
-        if(!fromV1Sync && shipmentDetails.getTransportMode().equals(Constants.TRANSPORT_MODE_AIR) && shipmentDetails.getJobType() != null && shipmentDetails.getJobType().equals(Constants.SHIPMENT_TYPE_DRT)) {
-            if(shipmentDetails.getMasterBill() != null && !shipmentDetails.getDirection().equals(Constants.IMP)) {
+        if (!fromV1Sync && shipmentDetails.getTransportMode().equals(Constants.TRANSPORT_MODE_AIR) && shipmentDetails.getJobType() != null && shipmentDetails.getJobType().equals(Constants.SHIPMENT_TYPE_DRT)) {
+            if (shipmentDetails.getMasterBill() != null && !shipmentDetails.getDirection().equals(Constants.IMP)) {
                 setMawbStock(shipmentDetails);
             }
         }
@@ -170,13 +220,12 @@ public class ShipmentDao implements IShipmentDao {
 
     @Override
     public void delete(ShipmentDetails shipmentDetails) {
-        validateLockStatus(shipmentDetails.getId());
+        validateLockStatus(shipmentDetails);
         shipmentRepository.delete(shipmentDetails);
     }
 
-    private void validateLockStatus(Long id) throws ValidationException {
-        Optional<ShipmentDetails> existingShipment = findById(id);
-        if(existingShipment.get().getIsLocked() != null && existingShipment.get().getIsLocked()) {
+    private void validateLockStatus(ShipmentDetails shipmentDetails) throws ValidationException {
+        if(shipmentDetails.getIsLocked() != null && shipmentDetails.getIsLocked()) {
             throw new ValidationException(ShipmentConstants.SHIPMENT_LOCKED);
         }
     }
@@ -193,20 +242,6 @@ public class ShipmentDao implements IShipmentDao {
     public List<ShipmentDetails> findByBookingReference(String ref){
         return shipmentRepository.findByBookingReference(ref);
     }
-    @Override
-    public void updateDateAndStatus(long id, LocalDateTime date, Integer status){
-        Optional<ShipmentDetails> shipmentDetails = shipmentRepository.findById(id);
-        if(shipmentDetails.isPresent()) {
-            ShipmentDetails shipment = shipmentDetails.get();
-            if(date != null) {
-                shipment.getAdditionalDetails().setDateOfIssue(date);
-            }
-            if(status != null) {
-                shipment.setStatus(status);
-            }
-            shipmentRepository.save(shipment);
-        }
-    }
 
     @Override
     public Long findMaxId() { return shipmentRepository.findMaxId(); }
@@ -214,7 +249,10 @@ public class ShipmentDao implements IShipmentDao {
     public Set<String> applyShipmentValidations(ShipmentDetails request, ShipmentDetails oldEntity) {
         Set<String> errors = new LinkedHashSet<>();
 
-        ShipmentSettingsDetails shipmentSettingsDetails = shipmentSettingsDao.getSettingsByTenantIds(List.of(TenantContext.getCurrentTenant())).get(0);
+        if(request.getConsolidationList() != null && request.getConsolidationList().size() > 1) {
+            errors.add("Multiple consolidations are attached to the shipment, please verify.");
+        }
+        ShipmentSettingsDetails shipmentSettingsDetails = ShipmentSettingsDetailsContext.getCurrentTenantSettings();
         // Routings leg no can not be repeated
         if (request.getRoutingsList() != null && request.getRoutingsList().size() > 0) {
             HashSet<Long> hashSet = new HashSet<>();
@@ -228,6 +266,15 @@ public class ShipmentDao implements IShipmentDao {
                 }
             }
         }
+
+        // Origin and Destinations are mandatory
+        if(request.getCarrierDetails() == null || IsStringNullOrEmpty(request.getCarrierDetails().getOrigin()) || IsStringNullOrEmpty(request.getCarrierDetails().getDestination()))
+            errors.add("Origin and Destination fields are mandatory.");
+
+        // POL and POD are mandatory for Sea and Air
+        if( ( Objects.equals(request.getTransportMode(), Constants.TRANSPORT_MODE_SEA) || Objects.equals(request.getTransportMode(), Constants.TRANSPORT_MODE_AIR) ) &&
+                (request.getCarrierDetails() == null || IsStringNullOrEmpty(request.getCarrierDetails().getOriginPort()) || IsStringNullOrEmpty(request.getCarrierDetails().getDestinationPort()) ))
+            errors.add("POL and POD fields are mandatory.");
 
         // Container Number can not be repeated
         if (request.getContainersList() != null && request.getContainersList().size() > 0) {
@@ -263,7 +310,7 @@ public class ShipmentDao implements IShipmentDao {
         }
 
         // Shipment must be attached to consolidation with same master bill
-        if (!IsStringNullOrEmpty(request.getMasterBill()) && (oldEntity == null || IsStringNullOrEmpty(oldEntity.getMasterBill()) || !oldEntity.getMasterBill().equals(request.getMasterBill()))) {
+        if (!IsStringNullOrEmpty(request.getMasterBill())) {
             ListCommonRequest listCommonRequest = constructListCommonRequest("bol", request.getMasterBill(), "=");
             Pair<Specification<ConsolidationDetails>, Pageable> consolidationPage = fetchData(listCommonRequest, ConsolidationDetails.class);
             Page<ConsolidationDetails> consolidationDetailsPage = consolidationDetailsDao.findAll(consolidationPage.getLeft(), consolidationPage.getRight());
@@ -282,7 +329,7 @@ public class ShipmentDao implements IShipmentDao {
         }
 
         // Shipment restricted unlocations validation
-        if (shipmentSettingsDetails.getRestrictedLocationsEnabled() && request.getCarrierDetails() != null) {
+        if (Boolean.TRUE.equals(shipmentSettingsDetails.getRestrictedLocationsEnabled()) && request.getCarrierDetails() != null) {
             String unLoc = null;
             if (request.getDirection().equals(Constants.DIRECTION_EXP)) {
                 unLoc = request.getCarrierDetails().getOriginPort();
@@ -317,7 +364,10 @@ public class ShipmentDao implements IShipmentDao {
         if(!IsStringNullOrEmpty(request.getHouseBill())) {
             List<ShipmentDetails> shipmentDetails = findByHouseBill(request.getHouseBill());
             if(shipmentDetails != null && shipmentDetails.size() > 0 && (request.getId() == null || shipmentDetails.get(0).getId().longValue() != request.getId().longValue())) {
-                errors.add("Shipment with BL# " + request.getHouseBill() + " already exists.");
+                if (Objects.equals(request.getStatus(), ShipmentStatus.Cancelled.getValue()))
+                    errors.add("Canceled HBL is already available in the application. Please remove/ modify the HBL number to proceed further");
+                else
+                    errors.add("Shipment with BL# " + request.getHouseBill() + " already exists.");
             }
         }
         if(!IsStringNullOrEmpty(request.getBookingReference())) {
@@ -334,10 +384,11 @@ public class ShipmentDao implements IShipmentDao {
         List<MawbStocksLink> mawbStocksLinks = mawbStocksLinkDao.findByMawbNumber(shipmentDetails.getMasterBill());
         if(mawbStocksLinks != null && mawbStocksLinks.size() > 0) {
             MawbStocksLink res = mawbStocksLinks.get(0);
-            if(res.getStatus() != "Consumed") {
+            if(!Objects.isNull(res.getStatus()) && !res.getStatus().equals(CONSUMED)) {
                 res.setEntityId(shipmentDetails.getId());
                 res.setEntityType(Constants.SHIPMENT);
-                res.setStatus("Consumed");
+                res.setShipConsNumber(shipmentDetails.getShipmentId());
+                res.setStatus(CONSUMED);
                 mawbStocksLinkDao.save(res);
                 setAvaliableCount(res.getParentId());
             }
@@ -348,7 +399,7 @@ public class ShipmentDao implements IShipmentDao {
         Optional<MawbStocks> mawbStocks = mawbStocksDao.findById(parentId);
         if(!mawbStocks.isEmpty()) {
             MawbStocks res = mawbStocks.get();
-            res.setAvailableCount(String.valueOf(Integer.parseInt(res.getAvailableCount()) - 1));
+            res.setAvailableCount(String.valueOf(Integer.parseInt(res.getAvailableCount() == null ? "1" : res.getAvailableCount()) - 1));
             res.setNextMawbNumber(assignNextMawbNumber(parentId));
             mawbStocksDao.save(res);
         }
@@ -357,7 +408,7 @@ public class ShipmentDao implements IShipmentDao {
     private String assignNextMawbNumber(Long parentId) {
         ListCommonRequest listCommonRequest;
         listCommonRequest = CommonUtils.andCriteria("parentId", parentId, "=", null);
-        CommonUtils.andCriteria("status", "Unused", "=", listCommonRequest);
+        CommonUtils.andCriteria("status", UNUSED, "=", listCommonRequest);
         listCommonRequest.setSortRequest(SortRequest.builder()
                 .fieldName("seqNumber")
                 .order("DESC")
@@ -370,31 +421,46 @@ public class ShipmentDao implements IShipmentDao {
         return null;
     }
 
-    private void directShipmentMAWBCheck(ShipmentDetails shipmentRequest) {
+    private void directShipmentMAWBCheck(ShipmentDetails shipmentRequest, String oldMasterBill) {
+
         if (StringUtility.isEmpty(shipmentRequest.getMasterBill())) {
+            if(!shipmentRequest.getDirection().equals("IMP")) {
+                mawbStocksLinkDao.deLinkExistingMawbStockLink(oldMasterBill);
+            }
+            return;
+        }
+        if (!Objects.equals(shipmentRequest.getMasterBill(), oldMasterBill) && !shipmentRequest.getDirection().equals("IMP")) {
+            mawbStocksLinkDao.deLinkExistingMawbStockLink(oldMasterBill);
+        }
+
+        if (Boolean.FALSE.equals(isMAWBNumberValid(shipmentRequest.getMasterBill())))
+            throw new ValidationException("Please enter a valid MAWB number.");
+
+        CarrierResponse correspondingCarrier = null;
+        if(shipmentRequest.getCarrierDetails() == null || StringUtility.isEmpty(shipmentRequest.getCarrierDetails().getShippingLine()) ||
+            !Objects.equals(shipmentRequest.getMasterBill(), oldMasterBill)) {
+            String mawbAirlineCode = shipmentRequest.getMasterBill().substring(0, 3);
+
+            V1DataResponse v1DataResponse = fetchCarrierDetailsFromV1(mawbAirlineCode, shipmentRequest.getJobType());
+            List<CarrierResponse> carrierDetails = jsonHelper.convertValueToList(v1DataResponse.entities, CarrierResponse.class);
+            if (carrierDetails == null || carrierDetails.isEmpty())
+                throw new ValidationException("Airline for the entered MAWB Number doesn't exist in Carrier Master");
+
+            correspondingCarrier = carrierDetails.get(0);
+
+            if(shipmentRequest.getCarrierDetails() == null || StringUtility.isEmpty(shipmentRequest.getCarrierDetails().getShippingLine())) {
+                if (shipmentRequest.getCarrierDetails() == null)
+                    shipmentRequest.setCarrierDetails(new CarrierDetails());
+
+                shipmentRequest.getCarrierDetails().setShippingLine(correspondingCarrier.getItemValue());
+            }
+        }
+
+        if (shipmentRequest.getDirection().equals("IMP")) {
             return;
         }
 
-        if (!isMAWBNumberValid(shipmentRequest.getMasterBill()))
-            throw new ValidationException("Please enter a valid MAWB number.");
-
-        String mawbAirlineCode = shipmentRequest.getMasterBill().substring(0, 3);
-
-        V1DataResponse v1DataResponse = fetchCarrierDetailsFromV1(mawbAirlineCode);
-        List<CarrierResponse> carrierDetails = jsonHelper.convertValueToList(v1DataResponse.entities, CarrierResponse.class);
-        if (carrierDetails == null || carrierDetails.size()==0)
-            throw new ValidationException("Airline for the entered MAWB Number doesn't exist in Carrier Master");
-
-
-        CarrierResponse correspondingCarrier = carrierDetails.get(0); //carrierDetails.getContent().get(0);
-
-        Boolean isMAWBNumberExist = false;
-        Boolean isCarrierExist = false;
-        if (shipmentRequest.getCarrierDetails() != null)
-            isCarrierExist = true;
-
-        if (isCarrierExist && !shipmentRequest.getCarrierDetails().getShippingLine().equals(correspondingCarrier.getItemValue()))
-            throw new ValidationException("MAWB Number prefix is not matching with entered Flight Carrier");
+        boolean isMAWBNumberExist = false;
 
         ListCommonRequest listMawbRequest = constructListCommonRequest("mawbNumber", shipmentRequest.getMasterBill(), "=");
         Pair<Specification<MawbStocksLink>, Pageable> mawbStocksLinkPair = fetchData(listMawbRequest, MawbStocksLink.class);
@@ -402,36 +468,36 @@ public class ShipmentDao implements IShipmentDao {
 
         MawbStocksLink mawbStocksLink = null;
 
-        if (mawbStocksLinkPage.getContent() != null && mawbStocksLinkPage.getTotalElements() > 0) {
+        if (!mawbStocksLinkPage.isEmpty() && mawbStocksLinkPage.getTotalElements() > 0) {
             isMAWBNumberExist = true;
             mawbStocksLink = mawbStocksLinkPage.getContent().get(0);
         }
 
-        if (!isCarrierExist)
-            shipmentRequest.setCarrierDetails(jsonHelper.convertValue(correspondingCarrier, CarrierDetails.class));
-
-        if (shipmentRequest.getDirection() == "IMP") {
-            return;
-        }
-
         if (isMAWBNumberExist) {
-            if (mawbStocksLink.getStatus() == "Consumed" && mawbStocksLink.getEntityId() != shipmentRequest.getId()) // If MasterBill number is already Consumed.
+            if (mawbStocksLink.getStatus().equals(CONSUMED) && !Objects.equals(mawbStocksLink.getEntityId(), shipmentRequest.getId())) // If MasterBill number is already Consumed.
                 throw new ValidationException("The MAWB number entered is already consumed. Please enter another MAWB number.");
         } else {
-            createNewMAWBEntry(shipmentRequest);
+            createNewMAWBEntry(shipmentRequest, correspondingCarrier != null ? correspondingCarrier.getItemValue() : shipmentRequest.getCarrierDetails().getShippingLine());
         }
     }
 
-    private void createNewMAWBEntry(ShipmentDetails shipmentRequest) {
+    private void createNewMAWBEntry(ShipmentDetails shipmentRequest, String shippingLine) {
         MawbStocks mawbStocks = new MawbStocks();
-        mawbStocks.setAirLinePrefix(shipmentRequest.getCarrierDetails().getShippingLine());
+        mawbStocks.setAirLinePrefix(shippingLine);
         mawbStocks.setCount("1");
+        mawbStocks.setAvailableCount("1");
         mawbStocks.setStartNumber(Long.valueOf(shipmentRequest.getMasterBill().substring(4, 10)));
         mawbStocks.setFrom(shipmentRequest.getMasterBill());
         mawbStocks.setTo(shipmentRequest.getMasterBill());
         mawbStocks.setMawbNumber(shipmentRequest.getMasterBill());
-        mawbStocks.setStatus("Unused");
-        // if(shipmentRequest.getBorrowedFrom()!=null) mawbStocks.setBorrowedFrom(Long.valueOf(shipmentRequest.getBorrowedFrom())); TODO fetch from v1
+        mawbStocks.setStatus(UNUSED);
+        if(shipmentRequest.getAdditionalDetails().getBorrowedFrom()!=null){
+             mawbStocks.setBorrowedFrom(shipmentRequest.getAdditionalDetails().getBorrowedFrom().getOrgCode());
+             if(shipmentRequest.getAdditionalDetails().getBorrowedFrom().getOrgData() != null && shipmentRequest.getAdditionalDetails().getBorrowedFrom().getOrgData().containsKey("FullName")) {
+                 String name = (String) shipmentRequest.getAdditionalDetails().getBorrowedFrom().getOrgData().get("FullName");
+                 mawbStocks.setBorrowedFromFullName(name);
+            }
+        }
         mawbStocks.setHomePort(shipmentRequest.getCarrierDetails().getOriginPort());
         mawbStocks = mawbStocksDao.save(mawbStocks);
 
@@ -440,7 +506,7 @@ public class ShipmentDao implements IShipmentDao {
             entryForMawbStocksLinkRow.setParentId(mawbStocks.getId());
             entryForMawbStocksLinkRow.setSeqNumber(shipmentRequest.getMasterBill().substring(4, 10));
             entryForMawbStocksLinkRow.setMawbNumber(shipmentRequest.getMasterBill());
-            entryForMawbStocksLinkRow.setStatus("Unused");
+            entryForMawbStocksLinkRow.setStatus(UNUSED);
             entryForMawbStocksLinkRow = mawbStocksLinkDao.save(entryForMawbStocksLinkRow);
         }
     }
@@ -450,11 +516,9 @@ public class ShipmentDao implements IShipmentDao {
         if (masterBill.length() == 12) {
             String mawbSeqNum = masterBill.substring(4, 11);
             String checkDigit = masterBill.substring(11, 12);
-            Long imawbSeqNum = 0L;
-            Long icheckDigit = 0L;
             if (areAllCharactersDigits(masterBill, 4, 12)) { // masterBill.substring(4, 12).matches("\\d+")
-                imawbSeqNum = Long.valueOf(mawbSeqNum);
-                icheckDigit = Long.valueOf(checkDigit);
+                Long imawbSeqNum = Long.valueOf(mawbSeqNum);
+                Long icheckDigit = Long.valueOf(checkDigit);
                 if (imawbSeqNum % 7 != icheckDigit)
                     MAWBNumberValidity = false;
             } else MAWBNumberValidity = false;
@@ -472,15 +536,50 @@ public class ShipmentDao implements IShipmentDao {
         return true;
     }
 
-    private V1DataResponse fetchCarrierDetailsFromV1(String mawbAirlineCode) {
+    private V1DataResponse fetchCarrierDetailsFromV1(String mawbAirlineCode, String type) {
         CommonV1ListRequest request = new CommonV1ListRequest();
         List<Object> criteria = new ArrayList<>();
-        criteria.addAll(List.of(List.of("AirlineCode"), "=", mawbAirlineCode));
+        criteria.add(Arrays.asList(List.of("AirlineCode"), "=", mawbAirlineCode));
+        criteria.add("and");
+        criteria.add(Arrays.asList(List.of("HasAirPort"), "=", 1));
+        request.setCriteriaRequests(criteria);
+        CarrierListObject carrierListObject = new CarrierListObject();
+        carrierListObject.setListObject(request);
+        carrierListObject.setType(type);
+        return v1Service.fetchCarrierMasterData(carrierListObject, false);
+    }
+
+    private void validateIataCode(ShipmentDetails shipmentDetails) {
+        if(shipmentDetails.getTransportMode() != null && shipmentDetails.getCarrierDetails() != null && StringUtility.isNotEmpty(shipmentDetails.getCarrierDetails().getShippingLine())
+             && shipmentDetails.getTransportMode().equalsIgnoreCase(Constants.TRANSPORT_MODE_AIR)) {
+            V1DataResponse v1DataResponse = fetchCarrier(shipmentDetails.getCarrierDetails().getShippingLine());
+            List<CarrierResponse> carrierDetails = jsonHelper.convertValueToList(v1DataResponse.entities, CarrierResponse.class);
+            if (carrierDetails == null || carrierDetails.size()==0 || StringUtility.isEmpty(carrierDetails.get(0).iATACode))
+                throw new ValidationException("Please add the IATA code in the Carrier Master for " + shipmentDetails.getCarrierDetails().getShippingLine());
+        }
+    }
+
+    private V1DataResponse fetchCarrier(String shippingLine) {
+        CommonV1ListRequest request = new CommonV1ListRequest();
+        List<Object> criteria = new ArrayList<>();
+        criteria.addAll(List.of(List.of("ItemValue"), "=", shippingLine));
         request.setCriteriaRequests(criteria);
         CarrierListObject carrierListObject = new CarrierListObject();
         carrierListObject.setListObject(request);
         V1DataResponse response = v1Service.fetchCarrierMasterData(carrierListObject, true);
         return response;
+    }
+    @Transactional
+    public void saveJobStatus(Long id, String jobStatus) {
+        shipmentRepository.saveJobStatus(id, jobStatus);
+    }
+
+    @Transactional
+    public void saveCreatedDateAndUser(Long id, String createdBy, LocalDateTime createdDate) {shipmentRepository.saveCreatedDateAndUser(id, createdBy, createdDate);}
+
+    @Override
+    public List<ShipmentDetails> getShipmentNumberFromId(List<Long> shipmentIds) {
+        return shipmentRepository.getShipmentNumberFromId(shipmentIds);
     }
 
 }
