@@ -1,7 +1,6 @@
 package com.dpw.runner.shipment.services.service.impl;
 
-import com.dpw.runner.shipment.services.ReportingService.CommonUtils.ReportHelper;
-import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.TenantContext;
+import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.ShipmentSettingsDetailsContext;
 import com.dpw.runner.shipment.services.commons.constants.*;
 import com.dpw.runner.shipment.services.commons.requests.CommonGetRequest;
 import com.dpw.runner.shipment.services.commons.requests.CommonRequestModel;
@@ -19,21 +18,24 @@ import com.dpw.runner.shipment.services.dto.request.HblResetRequest;
 import com.dpw.runner.shipment.services.dto.request.hbl.HblCargoDto;
 import com.dpw.runner.shipment.services.dto.request.hbl.HblContainerDto;
 import com.dpw.runner.shipment.services.dto.request.hbl.HblDataDto;
-import com.dpw.runner.shipment.services.dto.response.AdditionalDetailResponse;
 import com.dpw.runner.shipment.services.dto.response.HblResponse;
+import com.dpw.runner.shipment.services.dto.v1.response.CompanySettingsResponse;
 import com.dpw.runner.shipment.services.entity.*;
 import com.dpw.runner.shipment.services.entity.enums.HblReset;
 import com.dpw.runner.shipment.services.entitytransfer.dto.EntityTransferUnLocations;
+import com.dpw.runner.shipment.services.exception.exceptions.RunnerException;
 import com.dpw.runner.shipment.services.exception.exceptions.ValidationException;
 import com.dpw.runner.shipment.services.helpers.JsonHelper;
 import com.dpw.runner.shipment.services.helpers.LoggerHelper;
 import com.dpw.runner.shipment.services.helpers.ResponseHelper;
 import com.dpw.runner.shipment.services.masterdata.response.UnlocationsResponse;
 import com.dpw.runner.shipment.services.service.interfaces.IHblService;
-import com.dpw.runner.shipment.services.service.interfaces.ISyncQueueService;
+import com.dpw.runner.shipment.services.service.interfaces.IShipmentService;
+import com.dpw.runner.shipment.services.service.v1.IV1Service;
 import com.dpw.runner.shipment.services.syncing.Entity.HblRequestV2;
 import com.dpw.runner.shipment.services.syncing.constants.SyncingConstants;
 import com.dpw.runner.shipment.services.syncing.interfaces.IHblSync;
+import com.dpw.runner.shipment.services.syncing.interfaces.IShipmentSync;
 import com.dpw.runner.shipment.services.utils.AwbUtility;
 import com.dpw.runner.shipment.services.utils.MasterDataUtils;
 import com.dpw.runner.shipment.services.utils.PartialFetchUtils;
@@ -47,16 +49,18 @@ import org.springframework.dao.DataRetrievalFailureException;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.retry.support.RetryTemplate;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.interceptor.TransactionAspectSupport;
 
+import java.math.BigDecimal;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
 import static com.dpw.runner.shipment.services.helpers.DbAccessHelper.fetchData;
+import static com.dpw.runner.shipment.services.utils.CommonUtils.IsStringNullOrEmpty;
 import static com.dpw.runner.shipment.services.utils.CommonUtils.constructListCommonRequest;
 
 
@@ -69,18 +73,24 @@ public class HblService implements IHblService {
     @Autowired
     private IShipmentDao shipmentDao;
     @Autowired
+    private IShipmentSync shipmentSync;
+    @Autowired
     private JsonHelper jsonHelper;
     @Autowired
     IContainerDao containerDao;
     @Autowired
     IShipmentSettingsDao shipmentSettingsDao;
-    @Lazy
-    @Autowired
-    private ISyncQueueService syncQueueService;
+
     @Autowired
     private SyncConfig syncConfig;
     @Autowired
     private MasterDataUtils masterDataUtil;
+
+    @Autowired
+    @Lazy
+    IShipmentService shipmentService;
+    @Autowired
+    private IV1Service v1Service;
 
     private RetryTemplate retryTemplate = RetryTemplate.builder()
             .maxAttempts(3)
@@ -89,13 +99,13 @@ public class HblService implements IHblService {
             .build();
 
     @Value("${v1service.url.base}${v1service.url.hblSync}")
-    private String HBL_V1_SYNC_URL;
+    private String hblV1SyncUrl;
 
     @Autowired
     private IHblSync hblSync;
 
     @Override
-    public ResponseEntity<?> create(CommonRequestModel commonRequestModel) {
+    public ResponseEntity<IRunnerResponse> create(CommonRequestModel commonRequestModel) {
         String responseMsg;
         HblRequest request = null;
         request = (HblRequest) commonRequestModel.getData();
@@ -106,10 +116,10 @@ public class HblService implements IHblService {
         try {
             hbl = hblDao.save(hbl);
             try {
-                hblSync.sync(hbl);
+                hblSync.sync(hbl, UUID.randomUUID().toString());
             }
             catch (Exception e) {
-                log.error("Error performing sync on hbl entity, {}", e);
+                log.error(SyncingConstants.ERROR_PERFORMING_HBL_SYNC, e);
             }
             log.info("Hbl Details created successfully for Id {} with Request Id {}", hbl.getId(), LoggerHelper.getRequestIdFromMDC());
         } catch (Exception e) {
@@ -122,7 +132,7 @@ public class HblService implements IHblService {
     }
 
     @Override
-    public ResponseEntity<?> update(CommonRequestModel commonRequestModel) {
+    public ResponseEntity<IRunnerResponse> update(CommonRequestModel commonRequestModel) {
         String responseMsg;
         HblRequest request = (HblRequest) commonRequestModel.getData();
         long id = request.getId();
@@ -140,10 +150,10 @@ public class HblService implements IHblService {
         try {
             hbl = hblDao.save(old);
             try {
-                hblSync.sync(hbl);
+                hblSync.sync(hbl, UUID.randomUUID().toString());
             }
             catch (Exception e) {
-                log.error("Error performing sync on hbl entity, {}", e);
+                log.error(SyncingConstants.ERROR_PERFORMING_HBL_SYNC, e);
             }
             log.info("Updated the Hbl details for Id {} with Request Id {}", id, LoggerHelper.getRequestIdFromMDC());
         } catch (Exception e) {
@@ -156,50 +166,36 @@ public class HblService implements IHblService {
     }
 
     @Override
-    public ResponseEntity<?> list(CommonRequestModel commonRequestModel) {
+    public ResponseEntity<IRunnerResponse> list(CommonRequestModel commonRequestModel) {
         return null;
     }
 
     @Override
-    public CompletableFuture<ResponseEntity<?>> listAsync(CommonRequestModel commonRequestModel) {
+    public CompletableFuture<ResponseEntity<IRunnerResponse>> listAsync(CommonRequestModel commonRequestModel) {
         return null;
     }
 
     @Override
-    public ResponseEntity<?> delete(CommonRequestModel commonRequestModel) {
-        String responseMsg;
-        try {
-            CommonGetRequest request = (CommonGetRequest) commonRequestModel.getData();
-            long id = request.getId();
-            Optional<Hbl> hbl = hblDao.findById(id);
-            if (!hbl.isPresent()) {
-                throw new DataRetrievalFailureException(DaoConstants.DAO_DATA_RETRIEVAL_FAILURE);
-            }
-            hblDao.delete(hbl.get());
-            return ResponseHelper.buildSuccessResponse();
-        } catch (Exception e) {
-            responseMsg = e.getMessage() != null ? e.getMessage()
-                    : DaoConstants.DAO_GENERIC_DELETE_EXCEPTION_MSG;
-            log.error(responseMsg, e);
-            return ResponseHelper.buildFailedResponse(responseMsg);
-        }
+    public ResponseEntity<IRunnerResponse> delete(CommonRequestModel commonRequestModel) {
+        return null;
     }
 
     @Override
-    public ResponseEntity<?> retrieveById(CommonRequestModel commonRequestModel) {
+    public ResponseEntity<IRunnerResponse> retrieveById(CommonRequestModel commonRequestModel) {
         Long id = ((CommonGetRequest)commonRequestModel.getData()).getId();
         Optional<Hbl> hbl = hblDao.findById(id);
         if (hbl.isEmpty()) {
             throw new DataRetrievalFailureException(DaoConstants.DAO_DATA_RETRIEVAL_FAILURE);
         }
        CommonGetRequest request=((CommonGetRequest)commonRequestModel.getData());
-        if(request.getIncludeColumns()==null||request.getIncludeColumns().size()==0)
-        return ResponseHelper.buildSuccessResponse(convertEntityToDto(hbl.get()));
+        if(request.getIncludeColumns()==null || request.getIncludeColumns().isEmpty())
+            return ResponseHelper.buildSuccessResponse(convertEntityToDto(hbl.get()));
         else
             return ResponseHelper.buildSuccessResponse(PartialFetchUtils.fetchPartialListData(convertEntityToDto(hbl.get()),request.getIncludeColumns()));
     }
 
-    public Hbl checkAllContainerAssigned(Long shipmentId, List<Containers> containersList, List<Packing> packings) {
+    public Hbl checkAllContainerAssigned(ShipmentDetails shipment, List<Containers> containersList, List<Packing> packings) {
+        var shipmentId = shipment.getId();
         boolean allContainerAssigned = true;
         Hbl hbl = null;
         for(Containers container: containersList) {
@@ -224,25 +220,30 @@ public class HblService implements IHblService {
                 else
                     isContainerWithoutNumberOrNoContainer = true;
                 if (isContainerWithoutNumberOrNoContainer) {
-                    hbl.setHblContainer(mapShipmentContainersToHBL(containersList));
+                    hbl.setHblContainer(mapShipmentContainersToHBL(shipment));
                     hbl.setHblCargo(mapShipmentCargoToHBL(packings, containersList));
                     hbl = hblDao.save(hbl);
                 }
             }
             else {
-                List<ShipmentSettingsDetails> shipmentSettingsDetails = shipmentSettingsDao.getSettingsByTenantIds(List.of(TenantContext.getCurrentTenant()));
-                if(shipmentSettingsDetails.size() > 0 && (shipmentSettingsDetails.get(0).getRestrictHblGen() == null || !shipmentSettingsDetails.get(0).getRestrictHblGen())) {
-                    hbl = getHblFromShipmentId(shipmentId);
+                ShipmentSettingsDetails shipmentSettingsDetails = ShipmentSettingsDetailsContext.getCurrentTenantSettings();
+                if(shipmentSettingsDetails.getRestrictHblGen() == null || !shipmentSettingsDetails.getRestrictHblGen()) {
+                    try {
+                        hbl = getHblFromShipmentId(shipmentId);
+                    } catch (Exception ex) {
+                        log.error("HBL generation from Containers addition failed: " + ex.getMessage());
+                    }
                 }
             }
         }
         return hbl;
     }
 
-    private Hbl getHblFromShipmentId(Long shipmentId) {
+    private Hbl getHblFromShipmentId(Long shipmentId) throws RunnerException {
         Optional<ShipmentDetails> shipmentDetails = shipmentDao.findById(shipmentId);
         if (shipmentDetails.isEmpty())
             throw new DataRetrievalFailureException(DaoConstants.DAO_DATA_RETRIEVAL_FAILURE);
+        this. validateBeforeGeneration(shipmentDetails.get());
 
         List<Hbl> hbls = hblDao.findByShipmentId(shipmentId);
         if (! hbls.isEmpty())
@@ -253,26 +254,42 @@ public class HblService implements IHblService {
         hbl = hblDao.save(hbl);
         return hbl;
     }
+    private void validateBeforeGeneration(ShipmentDetails shipmentDetails){
+        if(!Objects.isNull(shipmentDetails.getContainersList()) && !Objects.equals(shipmentDetails.getShipmentType(), Constants.SHIPMENT_TYPE_LCL)) {
+            List<Containers> containers = shipmentDetails.getContainersList().stream().filter(c -> StringUtility.isEmpty(c.getContainerNumber())).toList();
+            if (!containers.isEmpty())
+                throw new ValidationException("Please assign container number to all the containers before generating the HBL.");
+        }
+        if(!shipmentDetails.getTransportMode().equals(Constants.TRANSPORT_MODE_SEA)
+                || !shipmentDetails.getDirection().equals(Constants.DIRECTION_EXP)
+                || (!shipmentDetails.getShipmentType().equals(Constants.CARGO_TYPE_FCL) && !shipmentDetails.getShipmentType().equals(Constants.SHIPMENT_TYPE_LCL))
+                || (shipmentDetails.getShipmentType().equals(Constants.SHIPMENT_TYPE_LCL) && Objects.equals(shipmentDetails.getJobType(), Constants.JOB_TYPE_CLB))){
+            return;
+        }
+        if(!Objects.isNull(shipmentDetails.getPackingList()) && !Objects.equals(shipmentDetails.getShipmentType(), Constants.SHIPMENT_TYPE_LCL)) {
+            var packsList = shipmentDetails.getPackingList().stream().filter(x -> Objects.isNull(x.getContainerId())).toList();
+            if(!packsList.isEmpty()){
+                throw new ValidationException("Container Number is Mandatory for HBL Generation, please assign the container number for all the packages in the shipment.");
+            }
+        }
+    }
 
     @Override
-    public ResponseEntity<?> generateHBL(CommonRequestModel commonRequestModel) {
+    public ResponseEntity<IRunnerResponse> generateHBL(CommonRequestModel commonRequestModel) throws RunnerException {
         HblGenerateRequest request = (HblGenerateRequest) commonRequestModel.getData();
-        List<Containers> containers = containerDao.findByShipmentId(request.getShipmentId()).stream().filter(c -> StringUtility.isEmpty(c.getContainerNumber())).toList();
-        if (!containers.isEmpty())
-            throw new ValidationException("Please assign container number to all the containers before generating the HBL.");
         Hbl hbl = getHblFromShipmentId(request.getShipmentId());
 
         try {
-            hblSync.sync(hbl);
+            hblSync.sync(hbl, UUID.randomUUID().toString());
         }
         catch (Exception e) {
-            log.error("Error performing sync on hbl entity, {}", e);
+            log.error(SyncingConstants.ERROR_PERFORMING_HBL_SYNC, e);
         }
 
         return ResponseHelper.buildSuccessResponse(convertEntityToDto(hbl));
     }
     @Override
-    public ResponseEntity<?> partialUpdateHBL(CommonRequestModel commonRequestModel) {
+    public ResponseEntity<IRunnerResponse> partialUpdateHBL(CommonRequestModel commonRequestModel) throws RunnerException {
         HblGenerateRequest request = (HblGenerateRequest) commonRequestModel.getData();
         Optional<ShipmentDetails> shipmentDetails = shipmentDao.findById(request.getShipmentId());
         if (shipmentDetails.isEmpty())
@@ -283,25 +300,20 @@ public class HblService implements IHblService {
             throw new ValidationException(String.format(HblConstants.HBL_NO_DATA_FOUND_SHIPMENT, shipmentDetails.get().getShipmentId()));
 
         Hbl hbl = hbls.get(0);
-        List<ShipmentSettingsDetails> shipmentSettingsDetailsList = shipmentSettingsDao.getSettingsByTenantIds(List.of(TenantContext.getCurrentTenant()));
-        if(shipmentSettingsDetailsList.isEmpty()){
-            log.error("Failed to fetch Shipment Settings Details");
-            throw new DataRetrievalFailureException(DaoConstants.DAO_DATA_RETRIEVAL_FAILURE);
-        }
-        ShipmentSettingsDetails shipmentSettingsDetails = shipmentSettingsDetailsList.get(0);
-        if(shipmentSettingsDetails.getRestrictBLEdit()) {
+        ShipmentSettingsDetails shipmentSettingsDetails = ShipmentSettingsDetailsContext.getCurrentTenantSettings();
+        if(shipmentSettingsDetails.getRestrictBLEdit() != null && shipmentSettingsDetails.getRestrictBLEdit()) {
             HblResetRequest resetRequest = HblResetRequest.builder().id(hbl.getId()).resetType(HblReset.ALL).build();
             return resetHbl(CommonRequestModel.buildRequest(resetRequest));
-        } else if (shipmentSettingsDetails.getAutoUpdateShipmentBL()){
+        } else if (shipmentSettingsDetails.getAutoUpdateShipmentBL() != null && shipmentSettingsDetails.getAutoUpdateShipmentBL()){
             updateHblFromShipment(shipmentDetails.get(), hbl, shipmentSettingsDetails);
             hbl = hblDao.save(hbl);
         }
 
         try {
-            hblSync.sync(hbl);
+            hblSync.sync(hbl, UUID.randomUUID().toString());
         }
         catch (Exception e) {
-            log.error("Error performing sync on hbl entity, {}", e);
+            log.error(SyncingConstants.ERROR_PERFORMING_HBL_SYNC, e);
         }
 
         return ResponseHelper.buildSuccessResponse(convertEntityToDto(hbl));
@@ -316,17 +328,24 @@ public class HblService implements IHblService {
     }
 
     @Override
-    public ResponseEntity<?> retrieveByShipmentId(CommonRequestModel request) {
+    public ResponseEntity<IRunnerResponse> retrieveByShipmentId(CommonRequestModel request) {
         Long shipmentId = ((CommonGetRequest) request.getData()).getId();
-        List<Hbl> hbls = hblDao.findByShipmentId(shipmentId);
-        if (hbls.isEmpty()) {
-            throw new DataRetrievalFailureException(DaoConstants.DAO_DATA_RETRIEVAL_FAILURE);
+
+        ShipmentSettingsDetails shipmentSettingsDetails = ShipmentSettingsDetailsContext.getCurrentTenantSettings();
+        if(shipmentSettingsDetails != null && ((shipmentSettingsDetails.getRestrictBLEdit() != null && shipmentSettingsDetails.getRestrictBLEdit()) || (shipmentSettingsDetails.getAutoUpdateShipmentBL() != null && shipmentSettingsDetails.getAutoUpdateShipmentBL()))){
+            HblGenerateRequest req = HblGenerateRequest.builder().shipmentId(shipmentId).build();
+            try {
+                partialUpdateHBL(CommonRequestModel.buildRequest(req));
+            } catch (Exception ex){
+                log.error("Error while partially updating Hbl fields due to: "+ ex.getMessage());
+            }
         }
-        return ResponseHelper.buildSuccessResponse(convertEntityToDto(hbls.get(0)));
+        List<Hbl> hbls = hblDao.findByShipmentId(shipmentId);
+        return ResponseHelper.buildSuccessResponse(hbls.isEmpty() ? null : convertEntityToDto(hbls.get(0)));
     }
 
     @Override
-    public ResponseEntity<?> resetHbl(CommonRequestModel commonRequestModel) {
+    public ResponseEntity<IRunnerResponse> resetHbl(CommonRequestModel commonRequestModel) throws RunnerException {
         HblResetRequest request = (HblResetRequest) commonRequestModel.getData();
         Optional<Hbl> hblOptional = hblDao.findById(request.getId());
         if (hblOptional.isEmpty()) {
@@ -349,7 +368,7 @@ public class HblService implements IHblService {
                 break;
 
             case HBL_CONTAINERS:
-                hbl.setHblContainer(mapShipmentContainersToHBL(shipmentDetails.get().getContainersList()));
+                hbl.setHblContainer(mapShipmentContainersToHBL(shipmentDetails.get()));
                 break;
 
             case HBL_PARTIES:
@@ -369,10 +388,10 @@ public class HblService implements IHblService {
         return ResponseHelper.buildSuccessResponse(convertEntityToDto(hbl));
     }
 
-    private Hbl getDefaultHblFromShipment(ShipmentDetails shipmentDetails) {
+    private Hbl getDefaultHblFromShipment(ShipmentDetails shipmentDetails) throws RunnerException {
         HblDataDto hblData = mapShipmentToHBL(shipmentDetails);
         List<HblCargoDto> hblCargos = mapShipmentCargoToHBL(shipmentDetails.getPackingList(), shipmentDetails.getContainersList());
-        List<HblContainerDto> hblContainers = mapShipmentContainersToHBL(shipmentDetails.getContainersList());
+        List<HblContainerDto> hblContainers = mapShipmentContainersToHBL(shipmentDetails);
         List<HblPartyDto> hblParties = mapShipmentPartiesToHBL(shipmentDetails.getAdditionalDetails() != null ? shipmentDetails.getAdditionalDetails().getNotifyParty() : null);
 
         Hbl hbl = Hbl.builder().shipmentId(shipmentDetails.getId())
@@ -384,6 +403,8 @@ public class HblService implements IHblService {
     }
 
     private Hbl convertRequestToEntity(HblRequest request) {
+        if (Objects.isNull(request))
+            return Hbl.builder().build();
         HblDataDto hblData = jsonHelper.convertValue(request, HblDataDto.class);
         Hbl hbl = Hbl.builder().shipmentId(request.getShipmentId())
                 .hblData(hblData).hblCargo(request.getCargoes())
@@ -404,7 +425,7 @@ public class HblService implements IHblService {
     }
 
 
-    private HblDataDto mapShipmentToHBL(ShipmentDetails shipmentDetail) {
+    private HblDataDto mapShipmentToHBL(ShipmentDetails shipmentDetail) throws RunnerException {
         HblDataDto hblData = HblDataDto.builder().build();
         hblData.setShipmentId(shipmentDetail.getId());
         if(shipmentDetail.getConsigner() != null) {
@@ -439,20 +460,27 @@ public class HblService implements IHblService {
         hblData.setCargoNetWeightUnit(shipmentDetail.getNetWeightUnit());
         hblData.setCargoGrossWeightUnit(shipmentDetail.getWeightUnit());
         hblData.setCargoGrossVolumeUnit(shipmentDetail.getVolumeUnit());
+        boolean syncShipment = false;
+        // generate HouseBill
+        if(StringUtility.isEmpty(shipmentDetail.getHouseBill())) {
+            shipmentDetail.setHouseBill(shipmentService.generateCustomHouseBL(shipmentDetail));
+            shipmentDao.save(shipmentDetail, false);
+            syncShipment = true;
+        }
         hblData.setHouseBill(shipmentDetail.getHouseBill());
-        hblData.setVesselName(carrierDetails.getVessel());
+        hblData.setVesselName(masterDataUtil.getVesselName(carrierDetails.getVessel()));
         hblData.setNoOfCopies(StringUtility.convertToString(additionalDetails.getCopy()));
         hblData.setVersion(1);
         hblData.setOriginOfGoods(additionalDetails.getGoodsCO());
         hblData.setVoyage(carrierDetails.getVoyage());
-        if (!Objects.isNull(additionalDetails.getExportBroker())) {
-            Parties exportBroker = additionalDetails.getExportBroker();
-            if (!Objects.isNull(exportBroker.getOrgData()) && exportBroker.getOrgData().containsKey(PartiesConstants.FULLNAME))
-                hblData.setDeliveryAgent(String.valueOf(exportBroker.getOrgData().get(PartiesConstants.FULLNAME)));
-            if (!Objects.isNull(exportBroker.getAddressData()) )
-                hblData.setDeliveryAgentAddress(AwbUtility.constructAddress(exportBroker.getAddressData()));
+        if (!Objects.isNull(additionalDetails.getImportBroker())) {
+            Parties broker = additionalDetails.getImportBroker();
+            if (!Objects.isNull(broker.getOrgData()) && broker.getOrgData().containsKey(PartiesConstants.FULLNAME))
+                hblData.setDeliveryAgent(String.valueOf(broker.getOrgData().get(PartiesConstants.FULLNAME)));
+            if (!Objects.isNull(broker.getAddressData()) )
+                hblData.setDeliveryAgentAddress(AwbUtility.constructAddress(broker.getAddressData()));
         }
-        UnlocationsResponse destination = ReportHelper.getUNLocRow(carrierDetails.getDestination());
+        UnlocationsResponse destination = masterDataUtil.getUNLocRow(carrierDetails.getDestination());
         // TODO: This needs to re-visit after incorporating this setting in service
         if (/*Unico HBL*/true) {
             hblData.setTransportType(shipmentDetail.getTransportMode());
@@ -480,6 +508,13 @@ public class HblService implements IHblService {
             }
 
         }
+        if (syncShipment) {
+            try {
+                shipmentSync.sync(shipmentDetail, null, null, StringUtility.convertToString(shipmentDetail.getGuid()), false);
+            } catch (Exception e) {
+                log.error("Error performing sync on shipment entity, {}", e);
+            }
+        }
 
         return hblData;
     }
@@ -489,19 +524,66 @@ public class HblService implements IHblService {
         String newLine = "\r\n";
         if (addressData.containsKey(PartiesConstants.COMPANY_NAME))
             sb.append(newLine).append(StringUtility.convertToString(addressData.get(PartiesConstants.COMPANY_NAME)));
+        if (addressData.containsKey(PartiesConstants.ADDRESS1))
+            sb.append(newLine).append(StringUtility.convertToString(addressData.get(PartiesConstants.ADDRESS1)));
         if (addressData.containsKey(PartiesConstants.CITY))
             sb.append(newLine).append(StringUtility.convertToString(addressData.get(PartiesConstants.CITY)));
         if (addressData.containsKey(PartiesConstants.COUNTRY))
             sb.append(newLine).append(StringUtility.convertToString(addressData.get(PartiesConstants.COUNTRY)));
-        if (addressData.containsKey(PartiesConstants.PIN_CODE))
-            sb.append(newLine).append(StringUtility.convertToString(addressData.get(PartiesConstants.PIN_CODE)));
-        if (addressData.containsKey(PartiesConstants.CONTACT_NUMBER))
-            sb.append(newLine).append(StringUtility.convertToString(addressData.get(PartiesConstants.CONTACT_NUMBER)));
+        if (addressData.containsKey(PartiesConstants.ZIP_POST_CODE))
+            sb.append(newLine).append(StringUtility.convertToString(addressData.get(PartiesConstants.ZIP_POST_CODE)));
+        if (addressData.containsKey(PartiesConstants.CONTACT_PHONE))
+            sb.append(newLine).append(StringUtility.convertToString(addressData.get(PartiesConstants.CONTACT_PHONE)));
 
-        return sb.toString();
+        return  !sb.isEmpty() && sb.toString().length() >= 2 ? sb.substring(2) : sb.toString();
     }
 
-    private List<HblContainerDto> mapShipmentContainersToHBL(List<Containers> containers) {
+    private List<HblContainerDto> mapShipmentContainersToHBL(ShipmentDetails shipment) {
+        if(shipment == null)
+            return null;
+        CompanySettingsResponse companySettingsResponse = v1Service.retrieveCompanySettings();
+        var referenceNumber = (shipment.getReferenceNumbersList() != null && shipment.getReferenceNumbersList().size() > 0) ? shipment.getReferenceNumbersList().stream().filter(x -> Objects.equals(x.getType(), "Container")).toList() : null;
+        Long noOfPackage = 0L;
+        String packsType = null;
+        String weightUnit = null;
+        String volumeUnit = null;
+        BigDecimal volume = BigDecimal.valueOf(0);
+        BigDecimal weight = BigDecimal.valueOf(0);
+        if(shipment.getPackingList() != null && shipment.getPackingList().size() > 0)
+        {
+            for(Packing packing: shipment.getPackingList())
+            {
+                if(packing.getPacks() != null)
+                    noOfPackage += Long.parseLong(packing.getPacks());
+                if(packing.getVolume() != null)
+                    volume = volume.add(packing.getVolume());
+                if(packing.getWeight() != null)
+                    weight = weight.add(packing.getWeight());
+            }
+            var packTypes = shipment.getPackingList().stream().map(Packing::getPacksType).distinct().toList();
+            packsType = packTypes != null && packTypes.size() == 1 ? packTypes.get(0) : "MultiPack";
+            var weightTypes = shipment.getPackingList().stream().map(Packing::getWeightUnit).distinct().toList();
+            weightUnit = weightTypes != null && weightTypes.size() == 1 ? weightTypes.get(0) : "KG";
+            var volumeTypes = shipment.getPackingList().stream().map(Packing::getVolumeUnit).distinct().toList();
+            volumeUnit = volumeTypes != null && volumeTypes.size() == 1 ? volumeTypes.get(0) : "M3";
+        }
+        if(referenceNumber != null && referenceNumber.size() > 0 && (shipment.getContainersList() == null || shipment.getContainersList().isEmpty()) && Objects.equals(shipment.getTransportMode(), "SEA") && Objects.equals(shipment.getShipmentType(), "LCL") && companySettingsResponse.getSeaLclContainerFlag())
+        {
+            return List.of(HblContainerDto.builder().
+                    containerNumber(referenceNumber.get(0).getReferenceNumber()).
+                    containerCount(1L).
+                    noOfPackages(noOfPackage).
+                    packsType(packsType).
+                    containerGrossVolume(volume).
+                    containerGrossWeight(weight).
+                    containerGrossVolumeUnit(volumeUnit).
+                    containerGrossWeightUnit(weightUnit).
+                    build());
+        }
+        var containers = shipment.getContainersList();
+        if(Objects.equals(containers, null)) {
+            containers = new ArrayList<>();
+        }
         List<HblContainerDto> hblContainers = new ArrayList<>();
         containers.forEach(container -> {
             HblContainerDto hblContainer = HblContainerDto.builder().build();
@@ -530,8 +612,11 @@ public class HblService implements IHblService {
         List<HblCargoDto> hblCargoes = new ArrayList<>();
         Map<Long, String> map = new HashMap<>();
         if(containers != null && containers.size() > 0)
-            map = containers.stream().collect(Collectors.toMap(Containers::getId, Containers::getContainerNumber));
+            map = containers.stream().filter(e -> !IsStringNullOrEmpty(e.getContainerNumber())).collect(Collectors.toMap(Containers::getId, Containers::getContainerNumber));
         Map<Long, String> finalMap = map;
+        if(Objects.equals(packings, null)) {
+            packings = new ArrayList<>();
+        }
         packings.forEach(pack -> {
             HblCargoDto cargo = HblCargoDto.builder().build();
             cargo.setGuid(pack.getGuid());
@@ -567,19 +652,16 @@ public class HblService implements IHblService {
     }
 
     @Override
-    public ResponseEntity<?> saveV1Hbl(CommonRequestModel commonRequestModel, boolean checkForSync) throws Exception {
+    public ResponseEntity<IRunnerResponse> saveV1Hbl(CommonRequestModel commonRequestModel, boolean checkForSync) throws RunnerException {
         String responseMsg;
         HblRequestV2 request = (HblRequestV2) commonRequestModel.getData();
-        if(request == null) {
-            log.error("Request is empty for Hbl update with Request Id {}", LoggerHelper.getRequestIdFromMDC());
-        }
 
-        if(request.getShipmentGuid() == null) {
+        if(request == null || request.getShipmentGuid() == null) {
             log.error("Request Id and Shipment Guid is null for Hbl update with Request Id {}", LoggerHelper.getRequestIdFromMDC());
             throw new DataRetrievalFailureException(DaoConstants.DAO_DATA_RETRIEVAL_FAILURE);
         }
         if (checkForSync && !Objects.isNull(syncConfig.IS_REVERSE_SYNC_ACTIVE) && !syncConfig.IS_REVERSE_SYNC_ACTIVE) {
-            return syncQueueService.saveSyncRequest(SyncingConstants.HBL, StringUtility.convertToString(request.getShipmentGuid()), request);
+            return new ResponseEntity<>(HttpStatus.OK);
         }
 
         ListCommonRequest listCommonRequest = constructListCommonRequest("guid", request.getShipmentGuid(), "=");
@@ -592,11 +674,12 @@ public class HblService implements IHblService {
         }
 
         try{
-            List<Hbl> hblList = hblDao.findByShipmentId(shipmentDetails.get().collect(Collectors.toList()).get(0).getId());
+            List<Hbl> hblList = hblDao.findByShipmentId(shipmentDetails.get().toList().get(0).getId());
             HblRequest hblRequest = jsonHelper.convertValue(request, HblRequest.class);
             Hbl entity = convertRequestToEntity(hblRequest);
-            entity.setShipmentId(shipmentDetails.get().collect(Collectors.toList()).get(0).getId());
-            if(!hblList.isEmpty() && hblList.size() > 0) {
+            entity.setShipmentId(shipmentDetails.get().toList().get(0).getId());
+            entity.setGuid(request.getGuid());
+            if(!hblList.isEmpty()) {
                 entity.setId(hblList.get(0).getId());
                 entity.setGuid(hblList.get(0).getGuid());
             }
@@ -606,7 +689,6 @@ public class HblService implements IHblService {
             responseMsg = e.getMessage() != null ? e.getMessage()
                     : DaoConstants.DAO_GENERIC_UPDATE_EXCEPTION_MSG;
             log.error(responseMsg, e);
-            TransactionAspectSupport.currentTransactionStatus().setRollbackOnly();
             throw new RuntimeException(e);
         }
         
@@ -664,7 +746,7 @@ public class HblService implements IHblService {
         if(!hblLock.getHouseBillLock())
             hblData.setHouseBill(shipmentDetail.getHouseBill());
         if(!hblLock.getVesselNameLock())
-            hblData.setVesselName(carrierDetails.getVessel());
+            hblData.setVesselName(masterDataUtil.getVesselName(carrierDetails.getVessel()));
 
         // TODO: This needs to re-visit after incorporating this setting in service
         if (/*Unico HBL*/true) {
@@ -717,19 +799,21 @@ public class HblService implements IHblService {
         if(containers != null && containers.size() > 0)
             map = containers.stream().collect(Collectors.toMap(Containers::getId, Containers::getContainerNumber));
         Map<Long, String> finalMap = map;
-        hbl.getHblCargo().forEach(cargo -> {
-            if(packMap.containsKey(cargo.getGuid())){
-                String containerNumber = null;
-                Packing packing = packMap.get(cargo.getGuid());
-                if(packing != null && packing.getContainerId() != null && finalMap.containsKey(packing.getContainerId()))
-                    containerNumber = finalMap.get(packing.getContainerId());
-                updateShipmentCargoFieldToHbl(packing, cargo, hblLock, containerNumber);
-                packMap.remove(cargo.getGuid());
-            }else {
-                deletedList.add(cargo);
-            }
-        });
-        hbl.getHblCargo().removeAll(deletedList);
+        if(hbl.getHblCargo() != null && !hbl.getHblCargo().isEmpty()) {
+            hbl.getHblCargo().forEach(cargo -> {
+                if (packMap.containsKey(cargo.getGuid())) {
+                    String containerNumber = null;
+                    Packing packing = packMap.get(cargo.getGuid());
+                    if (packing != null && packing.getContainerId() != null && finalMap.containsKey(packing.getContainerId()))
+                        containerNumber = finalMap.get(packing.getContainerId());
+                    updateShipmentCargoFieldToHbl(packing, cargo, hblLock, containerNumber);
+                    packMap.remove(cargo.getGuid());
+                } else {
+                    deletedList.add(cargo);
+                }
+            });
+            hbl.getHblCargo().removeAll(deletedList);
+        }
 
         packMap.forEach((guid, pack) -> {
             HblCargoDto cargo = HblCargoDto.builder().build();
@@ -746,6 +830,9 @@ public class HblService implements IHblService {
             cargo.setMarksAndNumbers(pack.getMarksnNums());
             cargo.setPackageCount(Integer.parseInt(pack.getPacks() == null ? "0" : pack.getPacks()));
             cargo.setPackageType(pack.getPacksType());
+            if(hbl.getHblCargo() == null){
+                hbl.setHblCargo(new ArrayList<>());
+            }
             hbl.getHblCargo().add(cargo);
         });
     }
@@ -780,15 +867,17 @@ public class HblService implements IHblService {
             contMap.put(cont.getGuid(), cont);
         });
         List<HblContainerDto> deletedList = new ArrayList<>();
-        hbl.getHblContainer().forEach(hblCont -> {
-            if(contMap.containsKey(hblCont.getGuid())){
-                updateShipmentContainersToHBL(contMap.get(hblCont.getGuid()), hblCont, hblLock);
-                contMap.remove(hblCont.getGuid());
-            }else {
-                deletedList.add(hblCont);
-            }
-        });
-        hbl.getHblContainer().removeAll(deletedList);
+        if(hbl.getHblContainer() != null && !hbl.getHblContainer().isEmpty()) {
+            hbl.getHblContainer().forEach(hblCont -> {
+                if (contMap.containsKey(hblCont.getGuid())) {
+                    updateShipmentContainersToHBL(contMap.get(hblCont.getGuid()), hblCont, hblLock);
+                    contMap.remove(hblCont.getGuid());
+                } else {
+                    deletedList.add(hblCont);
+                }
+            });
+            hbl.getHblContainer().removeAll(deletedList);
+        }
 
         if(!contMap.isEmpty()) {
             contMap.forEach((guid, container) -> {
@@ -807,6 +896,9 @@ public class HblService implements IHblService {
                 hblContainer.setCustomsSealNumber(container.getCustomsSealNumber());
                 hblContainer.setContainerDesc(container.getDescriptionOfGoods());
                 hblContainer.setQuantity(container.getContainerCount());
+                if(hbl.getHblContainer() == null){
+                    hbl.setHblContainer(new ArrayList<>());
+                }
                 hbl.getHblContainer().add(hblContainer);
             });
         }
@@ -838,22 +930,24 @@ public class HblService implements IHblService {
     private void updateShipmentPartiesToHBL(Parties party, Hbl hbl, HblLockSettings hblLock) {
         boolean createNotifyParty = true;
         HblPartyDto deleteParty = new HblPartyDto();
-        for(var hblParty: hbl.getHblNotifyParty()){
-            if(hblParty.getIsShipmentCreated() != null && hblParty.getIsShipmentCreated()){
-                createNotifyParty = false;
-                if(party != null){
-                    if(!hblLock.getNotifyPartyNameLock())
-                        hblParty.setName(StringUtility.convertToString(party.getOrgData().get(PartiesConstants.FULLNAME)));
-                    if(!hblLock.getNotifyPartyAddressLock())
-                        hblParty.setAddress(constructAddress(party.getAddressData()));
-                    if(!hblLock.getNotifyPartyEmailLock())
-                        hblParty.setEmail(StringUtility.convertToString(party.getOrgData().get(PartiesConstants.EMAIL)));
-                } else {
-                    deleteParty = hblParty;
+        if(hbl.getHblNotifyParty() != null && !hbl.getHblNotifyParty().isEmpty()) {
+            for (var hblParty : hbl.getHblNotifyParty()) {
+                if (hblParty.getIsShipmentCreated() != null && hblParty.getIsShipmentCreated()) {
+                    createNotifyParty = false;
+                    if (party != null) {
+                        if (!hblLock.getNotifyPartyNameLock())
+                            hblParty.setName(StringUtility.convertToString(party.getOrgData().get(PartiesConstants.FULLNAME)));
+                        if (!hblLock.getNotifyPartyAddressLock())
+                            hblParty.setAddress(constructAddress(party.getAddressData()));
+                        if (!hblLock.getNotifyPartyEmailLock())
+                            hblParty.setEmail(StringUtility.convertToString(party.getOrgData().get(PartiesConstants.EMAIL)));
+                    } else {
+                        deleteParty = hblParty;
+                    }
                 }
             }
+            hbl.getHblNotifyParty().remove(deleteParty);
         }
-        hbl.getHblNotifyParty().remove(deleteParty);
 
         HblPartyDto hblParty = HblPartyDto.builder().build();
         if (party != null && createNotifyParty) {
@@ -861,6 +955,9 @@ public class HblService implements IHblService {
             hblParty.setName(StringUtility.convertToString(party.getOrgData().get(PartiesConstants.FULLNAME)));
             hblParty.setAddress(constructAddress(party.getAddressData()));
             hblParty.setEmail(StringUtility.convertToString(party.getOrgData().get(PartiesConstants.EMAIL)));
+            if(hbl.getHblNotifyParty() == null){
+                hbl.setHblNotifyParty(new ArrayList<>());
+            }
             hbl.getHblNotifyParty().add(hblParty);
         }
 
@@ -878,7 +975,7 @@ public class HblService implements IHblService {
             locCodes.add(additionalDetails.getPlaceOfSupply());
         }
 
-        Map<String, EntityTransferUnLocations> v1Data = masterDataUtil.fetchInBulkUnlocations(locCodes.stream().filter(Objects::nonNull).collect(Collectors.toList()), EntityTransferConstants.LOCATION_SERVICE_GUID);
+        Map<String, EntityTransferUnLocations> v1Data = masterDataUtil.fetchInBulkUnlocations(locCodes.stream().filter(Objects::nonNull).toList(), EntityTransferConstants.LOCATION_SERVICE_GUID);
         return v1Data;
     }
 
@@ -910,6 +1007,7 @@ public class HblService implements IHblService {
                     hblDataDto.setPlaceOfReceipt(getUnLocationsName(v1Data, additionalDetails.getPlaceOfSupply()));
                 }
                 break;
+            default:
         }
 
     }
@@ -918,7 +1016,7 @@ public class HblService implements IHblService {
         if (Objects.isNull(key) || !v1Data.containsKey(key))
             return StringUtility.getEmptyString();
 
-        return v1Data.get(key).getPortName();
+        return v1Data.get(key).getLocCode() + " " + v1Data.get(key).getNameWoDiacritics();
     }
-    
+
 }
