@@ -1,38 +1,46 @@
 package com.dpw.runner.shipment.services.syncing.impl;
 
+import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.TenantContext;
+import com.dpw.runner.shipment.services.aspects.MultitenancyAspect.UserContext;
+import com.dpw.runner.shipment.services.commons.constants.Constants;
+import com.dpw.runner.shipment.services.commons.constants.PartiesConstants;
+import com.dpw.runner.shipment.services.commons.constants.TimeZoneConstants;
+import com.dpw.runner.shipment.services.commons.responses.IRunnerResponse;
 import com.dpw.runner.shipment.services.dao.interfaces.IConsoleShipmentMappingDao;
 import com.dpw.runner.shipment.services.dao.interfaces.IConsolidationDetailsDao;
 import com.dpw.runner.shipment.services.dao.interfaces.IShipmentDao;
-import com.dpw.runner.shipment.services.dto.v1.response.V1DataSyncResponse;
-import com.dpw.runner.shipment.services.entity.CarrierDetails;
-import com.dpw.runner.shipment.services.entity.ConsoleShipmentMapping;
-import com.dpw.runner.shipment.services.entity.Parties;
-import com.dpw.runner.shipment.services.entity.ShipmentDetails;
+import com.dpw.runner.shipment.services.dto.request.NotesRequest;
+import com.dpw.runner.shipment.services.entity.*;
 import com.dpw.runner.shipment.services.entity.enums.Ownership;
+import com.dpw.runner.shipment.services.exception.exceptions.RunnerException;
 import com.dpw.runner.shipment.services.helpers.JsonHelper;
 import com.dpw.runner.shipment.services.helpers.ResponseHelper;
+import com.dpw.runner.shipment.services.service.interfaces.ISyncService;
 import com.dpw.runner.shipment.services.service.v1.IV1Service;
 import com.dpw.runner.shipment.services.syncing.Entity.*;
 import com.dpw.runner.shipment.services.syncing.constants.SyncingConstants;
+import com.dpw.runner.shipment.services.syncing.interfaces.IConsolidationSync;
 import com.dpw.runner.shipment.services.syncing.interfaces.IShipmentSync;
+import com.dpw.runner.shipment.services.utils.CommonUtils;
 import com.dpw.runner.shipment.services.utils.EmailServiceUtility;
+import com.dpw.runner.shipment.services.utils.StringUtility;
+import com.dpw.runner.shipment.services.utils.V1AuthHelper;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
+import org.slf4j.MDC;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.dao.DataRetrievalFailureException;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseEntity;
 import org.springframework.retry.support.RetryTemplate;
-import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.*;
 
 import static com.dpw.runner.shipment.services.utils.CommonUtils.stringValueOf;
+import static com.dpw.runner.shipment.services.utils.DateUtils.convertDateToUserTimeZone;
+import static java.util.stream.Collectors.toMap;
 
 @Component
 @Slf4j
@@ -52,13 +60,16 @@ public class ShipmentSync implements IShipmentSync {
     IShipmentDao shipmentDao;
     @Autowired
     private IV1Service v1Service;
+    @Autowired
+    private V1AuthHelper v1AuthHelper;
 
     @Autowired
     private EmailServiceUtility emailServiceUtility;
 
     @Autowired
     private SyncEntityConversionService syncEntityConversionService;
-
+    @Autowired
+    private CommonUtils commonUtils;
     private RetryTemplate retryTemplate = RetryTemplate.builder()
             .maxAttempts(3)
             .fixedBackoff(1000)
@@ -67,11 +78,25 @@ public class ShipmentSync implements IShipmentSync {
 
     @Value("${v1service.url.base}${v1service.url.shipmentSync}")
     private String SHIPMENT_V1_SYNC_URL;
-
+    @Autowired
+    private ISyncService syncService;
+    @Autowired
+    private IConsolidationSync consolidationSync;
     @Override
-    public ResponseEntity<?> sync(ShipmentDetails sd) {
-        CustomShipmentSyncRequest temp = new CustomShipmentSyncRequest();
+    public ResponseEntity<IRunnerResponse> sync(ShipmentDetails sd, List<UUID> deletedContGuids, List<NotesRequest> customerBookingNotes, String transactionId, boolean isDirectSync) throws RunnerException {
+        CustomShipmentSyncRequest cs = createShipmentSyncReq(sd, deletedContGuids, customerBookingNotes);
 
+        String finalCs = jsonHelper.convertToJson(V1DataSyncRequest.builder().entity(cs).module(SyncingConstants.SHIPMENT).build());
+        if (isDirectSync) {
+            HttpHeaders httpHeaders = v1AuthHelper.getHeadersForDataSyncFromKafka(UserContext.getUser().getUsername(), TenantContext.getCurrentTenant());
+            syncService.callSyncAsync(finalCs, StringUtility.convertToString(sd.getId()), StringUtility.convertToString(sd.getGuid()), "Shipments", httpHeaders);
+        }
+        else
+            syncService.pushToKafka(finalCs, StringUtility.convertToString(sd.getId()), StringUtility.convertToString(sd.getGuid()), "Shipments", transactionId);
+        return ResponseHelper.buildSuccessResponse(modelMapper.map(cs, CustomShipmentSyncRequest.class));
+    }
+
+    private CustomShipmentSyncRequest createShipmentSyncReq(ShipmentDetails sd, List<UUID> deletedContGuids, List<NotesRequest> customerBookingNotes) {
         CustomShipmentSyncRequest cs = modelMapper.map(sd, CustomShipmentSyncRequest.class);
         // First map nested entity that are root level properties in v1
         mapAdditionalDetails(cs, sd);
@@ -82,6 +107,7 @@ public class ShipmentSync implements IShipmentSync {
         // example Guid
         // assigning root level properties not previously mapped
         mapConsolidationGuids(cs, sd);
+        cs.setSourceGuid(sd.getSourceGuid());
         cs.setReferenceNo(sd.getBookingReference());
         cs.setCustom_ShipType(sd.getDirection());
         cs.setContainerType(sd.getShipmentType());
@@ -110,12 +136,15 @@ public class ShipmentSync implements IShipmentSync {
         // assigning child entities not automatically mapped
         // entityID also gets assigned as a part of this mapping
         mapTruckDriverDetail(cs, sd);
-        mapRoutings(cs, sd);
-        mapContainers(cs, sd);
+        cs.setRoutings(syncEntityConversionService.routingsV2ToV1(sd.getRoutingsList()));
+        mapEvents(cs, sd);
+        cs.setContainersList(syncEntityConversionService.containersV2ToV1(sd.getContainersList()));
         cs.setReferenceNumbers(convertToList(sd.getReferenceNumbersList(), ReferenceNumbersRequestV2.class));
-        cs.setPackings_(syncEntityConversionService.packingsV2ToV1(sd.getPackingList(), sd.getContainersList()));
+        cs.setPackings_(syncEntityConversionService.packingsV2ToV1(sd.getPackingList(), sd.getContainersList(), sd.getGuid(), null));
+        cs.setShipmentAddresses(syncEntityConversionService.addressesV2ToV1(sd.getShipmentAddresses()));
         cs.setDocs_(convertToList(sd.getFileRepoList(), FileRepoRequestV2.class));
         cs.setELDetails(convertToList(sd.getElDetailsList(), ElDetailsRequestV2.class));
+        cs.setCustomerBookingNotesList(convertToList(customerBookingNotes, NoteRequestV2.class));
         // PickupAddressJSON and DeliveryAddressJSON (could be renamed for easy mapping)
 
         cs.setBookingCarriages(convertToList(sd.getBookingCarriagesList(), BookingCarriageRequestV2.class));
@@ -123,66 +152,70 @@ public class ShipmentSync implements IShipmentSync {
         cs.setGuid(sd.getGuid());
         cs.setDescription(sd.getGoodsDescription());
         cs.setCreatedBy(sd.getCreatedBy());
-        String finalCs = jsonHelper.convertToJson(V1DataSyncRequest.builder().entity(cs).module(SyncingConstants.SHIPMENT).build());
-        return callSync(finalCs, cs, sd.getId(), sd.getGuid());
-    }
+        cs.setClientCountryFilter(sd.getClientCountry());
+        cs.setConsigneeCountryFilter(sd.getConsigneeCountry());
+        cs.setConsignorCountryFilter(sd.getConsignorCountry());
+        cs.setNotifyPartyCountryFilter(sd.getNotifyPartyCountry());
+        cs.setCreatedDate(sd.getShipmentCreatedOn());
+        
+        // Manually mapped fields
+        cs.setVolumeWeight(sd.getVolumetricWeight());
+        cs.setWeightVolumeUnit(sd.getVolumetricWeightUnit());
+        if(sd.getConsignee() != null && sd.getConsignee().getIsAddressFreeText() != null && sd.getConsignee().getIsAddressFreeText()){
+            cs.setIsConsigneeFreeTextAddress(true);
 
-    @Async
-    public ResponseEntity<?> callSync(String finalCs, CustomShipmentSyncRequest cs, Long id, UUID guid) {
-
-        retryTemplate.execute(ctx -> {
-            log.info("Current retry : {}", ctx.getRetryCount());
-            if (ctx.getLastThrowable() != null) {
-                log.error("V1 error -> {}", ctx.getLastThrowable().getMessage());
-            }
-            V1DataSyncResponse response_ = v1Service.v1DataSync(finalCs);
-            if (!response_.getIsSuccess()) {
-                try {
-                    emailServiceUtility.sendEmailForSyncEntity(String.valueOf(id), String.valueOf(guid),
-                            "Shipment Sync", response_.getError().toString());
-                } catch (Exception ex) {
-                    log.error("Not able to send email for sync failure for Shipment Sync " + ex.getMessage());
-                }
-            }
-            return ResponseHelper.buildSuccessResponse(response_);
-        });
-
-        return ResponseHelper.buildSuccessResponse(modelMapper.map(cs, CustomShipmentSyncRequest.class));
-    }
-
-    @Override
-    @Async
-    public ResponseEntity<?> syncById(Long shipmentId) {
-        Optional<ShipmentDetails> shipmentDetails = shipmentDao.findById(shipmentId);
-        if(shipmentDetails.isPresent()) {
-            return sync(shipmentDetails.get());
+            var rawData = sd.getConsignee().getAddressData() != null ? sd.getConsignee().getAddressData().get(PartiesConstants.RAW_DATA): null;
+            if(rawData!=null)
+                cs.setConsigneeFreeTextAddress(rawData.toString());
         }
-        else {
-            throw new DataRetrievalFailureException("");
-        }
-    }
+        else cs.setIsConsigneeFreeTextAddress(false);
 
+        if(sd.getConsigner() != null && sd.getConsigner().getIsAddressFreeText() != null && sd.getConsigner().getIsAddressFreeText()){
+            cs.setIsConsignerFreeTextAddress(true);
+            var rawData = sd.getConsigner().getAddressData() != null ? sd.getConsigner().getAddressData().get(PartiesConstants.RAW_DATA): null;
+            if(rawData!=null)
+                cs.setConsignerFreeTextAddress(rawData.toString());
+        }
+        else  cs.setIsConsignerFreeTextAddress(false);
+
+        if(sd.getAdditionalDetails() != null && sd.getAdditionalDetails().getNotifyParty() != null && sd.getAdditionalDetails().getNotifyParty().getIsAddressFreeText() != null && sd.getAdditionalDetails().getNotifyParty().getIsAddressFreeText()){
+            cs.setIsNotifyPartyFreeTextAddress(true);
+            var rawData = sd.getAdditionalDetails().getNotifyParty().getAddressData() != null ? sd.getAdditionalDetails().getNotifyParty().getAddressData().get(PartiesConstants.RAW_DATA): null;
+            if(rawData!=null)
+                cs.setNotifyPartyFreeTextAddress(rawData.toString());
+        }
+        else cs.setIsNotifyPartyFreeTextAddress(false);
+
+        cs.setDeletedContGuids(deletedContGuids);
+        return cs;
+    }
     @Override
-    @Async
     public void syncLockStatus(ShipmentDetails shipmentDetails) {
         LockSyncRequest lockSyncRequest = LockSyncRequest.builder().guid(shipmentDetails.getGuid()).lockStatus(shipmentDetails.getIsLocked()).build();
         String finalCs = jsonHelper.convertToJson(V1DataSyncRequest.builder().entity(lockSyncRequest).module(SyncingConstants.SHIPMENT_LOCK).build());
-        retryTemplate.execute(ctx -> {
-            log.info("Current retry : {}", ctx.getRetryCount());
-            if (ctx.getLastThrowable() != null) {
-                log.error("V1 error -> {}", ctx.getLastThrowable().getMessage());
+        syncService.pushToKafka(finalCs, StringUtility.convertToString(shipmentDetails.getId()), StringUtility.convertToString(shipmentDetails.getGuid()), "Shipment Lock Sync", StringUtility.convertToString(shipmentDetails.getGuid()));
+    }
+    @Override
+    public ResponseEntity<IRunnerResponse> syncFromBooking(ShipmentDetails sd, List<UUID> deletedContGuids, List<NotesRequest> customerBookingNotes) throws RunnerException {
+        CustomShipmentSyncRequest cs = createShipmentSyncReq(sd, deletedContGuids, customerBookingNotes);
+        HttpHeaders httpHeaders = v1AuthHelper.getHeadersForDataSyncFromKafka(UserContext.getUser().getUsername(), TenantContext.getCurrentTenant());
+        String shipment = jsonHelper.convertToJson(V1DataSyncRequest.builder().entity(cs).module(SyncingConstants.SHIPMENT).build());
+        if (!Objects.isNull(sd.getConsolidationList()) && !sd.getConsolidationList().isEmpty()) {
+            var console = consolidationDetailsDao.findById(sd.getConsolidationList().get(0).getId());
+            if (console.isPresent()) {
+                CustomConsolidationRequest response = consolidationSync.createConsoleSyncReq(console.get());
+                String consolidationRequest = jsonHelper.convertToJson(V1DataSyncRequest.builder().entity(response).module(SyncingConstants.CONSOLIDATION).build());
+                syncService.callSyncAsync(Arrays.asList(shipment, consolidationRequest) ,
+                        Arrays.asList(StringUtility.convertToString(sd.getId()), StringUtility.convertToString(console.get().getId())),
+                        Arrays.asList(StringUtility.convertToString(sd.getGuid()), StringUtility.convertToString(console.get().getGuid())),
+                        Arrays.asList(SyncingConstants.SHIPMENT, SyncingConstants.CONSOLIDATION), httpHeaders);
             }
-            V1DataSyncResponse response_ = v1Service.v1DataSync(finalCs);
-            if (!response_.getIsSuccess()) {
-                try {
-                    emailServiceUtility.sendEmailForSyncEntity(String.valueOf(shipmentDetails.getId()), String.valueOf(shipmentDetails.getGuid()),
-                            "Shipment Lock Sync", response_.getError().toString());
-                } catch (Exception ex) {
-                    log.error("Not able to send email for sync failure for Shipment Sync " + ex.getMessage());
-                }
-            }
-            return ResponseHelper.buildSuccessResponse(response_);
-        });
+            else
+                syncService.callSyncAsync(shipment, StringUtility.convertToString(sd.getId()), StringUtility.convertToString(sd.getGuid()), SyncingConstants.SHIPMENT, httpHeaders);
+        } else
+            syncService.callSyncAsync(shipment, StringUtility.convertToString(sd.getId()), StringUtility.convertToString(sd.getGuid()), SyncingConstants.SHIPMENT, httpHeaders);
+
+        return ResponseHelper.buildSuccessResponse(modelMapper.map(cs, CustomShipmentSyncRequest.class));
     }
 
     private void mapConsolidationGuids(CustomShipmentSyncRequest response, ShipmentDetails request) {
@@ -191,7 +224,7 @@ public class ShipmentSync implements IShipmentSync {
                 .map(item -> {
                     return consolidationDetailsDao.findById(item.getConsolidationId()).get().getGuid()  ;
                 })
-                .collect(Collectors.toList());
+                .toList();
         response.setConsolidationGuids(req);
     }
 
@@ -204,17 +237,27 @@ public class ShipmentSync implements IShipmentSync {
     private void mapTruckDriverDetail(CustomShipmentSyncRequest cs, ShipmentDetails sd) {
         if(sd.getTruckDriverDetails() == null)
             return;
-
+        UUID consolGuid = null;
+        Map<Long, UUID> map = new HashMap<>();
+        if(sd.getContainersList() != null && !sd.getContainersList().isEmpty())
+            map = sd.getContainersList().stream().collect(toMap(Containers::getId, Containers::getGuid));
+        if(cs.getConsolidationGuids() != null && !cs.getConsolidationGuids().isEmpty())
+            consolGuid = cs.getConsolidationGuids().get(0);
+        UUID finalConsolGuid = consolGuid;
+        Map<Long, UUID> finalMap = map;
         List<TruckDriverDetailsRequestV2> req = sd.getTruckDriverDetails().stream()
                 .map(item -> {
                     TruckDriverDetailsRequestV2 t;
                     t = modelMapper.map(item, TruckDriverDetailsRequestV2.class);
-                    t.setTransporterNameOrg(item.getTransporterName());
-                    //ENUM
-                    t.setTransporterTypeString(item.getTransporterType().toString());
+                    if(item.getTransporterType() != null)
+                        t.setTransporterTypeString(item.getTransporterType().toString());
+                    t.setConsolidationGuid(finalConsolGuid);
+                    t.setShipmentGuid(sd.getGuid());
+                    if(item.getContainerId() != null && finalMap.containsKey(item.getContainerId()))
+                        t.setContainerGuid(finalMap.get(item.getContainerId()));
                     return t;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         cs.setTruckDriverDetail(req);
 
@@ -237,6 +280,11 @@ public class ShipmentSync implements IShipmentSync {
         if(sd.getAdditionalDetails() == null)
             return;
         modelMapper.map(sd.getAdditionalDetails(), cs);
+        if(cs.getTransportMode().equals(Constants.TRANSPORT_MODE_AIR))
+            cs.setIssueDate(sd.getAdditionalDetails().getDateOfIssue());
+        else
+            cs.setDateofIssue(sd.getAdditionalDetails().getDateOfIssue());
+        cs.setDateofReceipt(sd.getAdditionalDetails().getDateOfReceipt());
         cs.setReceivingForwarderParty(mapPartyObject(sd.getAdditionalDetails().getReceivingForwarder()));
         cs.setSendingForwarderParty(mapPartyObject(sd.getAdditionalDetails().getSendingForwarder()));
         cs.setTraderOrSupplierParty(mapPartyObject(sd.getAdditionalDetails().getTraderOrSupplier()));
@@ -244,16 +292,28 @@ public class ShipmentSync implements IShipmentSync {
             cs.setAndesStatusString(String.valueOf(sd.getAdditionalDetails().getAndesStatus().getValue()));
         if(sd.getAdditionalDetails().getOwnership() != null) {
             cs.setOwnershipString(String.valueOf(sd.getAdditionalDetails().getOwnership().getValue()));
-            if(sd.getAdditionalDetails().getOwnership().equals(Ownership.SELF))
+            if(sd.getAdditionalDetails().getOwnership().equals(Ownership.Self))
                 cs.setOwnershipName(sd.getAdditionalDetails().getOwnershipName());
             else
                 cs.setOwnershipParty(mapPartyObject(sd.getAdditionalDetails().getOwnershipOrg()));
         }
         if(sd.getAdditionalDetails().getPassedBy() != null)
             cs.setPassedByString(String.valueOf(sd.getAdditionalDetails().getPassedBy().getValue()));
-        cs.setBoedate(sd.getAdditionalDetails().getBOEDate());
+        cs.setBoedate(convertDateToUserTimeZone(sd.getAdditionalDetails().getBOEDate(), MDC.get(TimeZoneConstants.BROWSER_TIME_ZONE_NAME), null, false));
         cs.setBoenumber(sd.getAdditionalDetails().getBOENumber());
+        cs.setIgmfileDate(convertDateToUserTimeZone(sd.getAdditionalDetails().getIGMFileDate(), MDC.get(TimeZoneConstants.BROWSER_TIME_ZONE_NAME), null, false));
+        cs.setIgmfileNo(sd.getAdditionalDetails().getIGMFileNo());
+        cs.setIgminwardDate(convertDateToUserTimeZone(sd.getAdditionalDetails().getIGMInwardDate(), MDC.get(TimeZoneConstants.BROWSER_TIME_ZONE_NAME), null, false));
+        cs.setSmtpigmdate(convertDateToUserTimeZone(sd.getAdditionalDetails().getSMTPIGMDate(), MDC.get(TimeZoneConstants.BROWSER_TIME_ZONE_NAME), null, false));
+        cs.setSmtpigmnumber(sd.getAdditionalDetails().getSMTPIGMNumber());
         cs.setHblDeliveryMode(sd.getAdditionalDetails().getDeliveryMode());
+        cs.setChargesApply(sd.getAdditionalDetails().getBLChargesDisplay());
+        cs.setExporterStmt(sd.getAdditionalDetails().getBLExporterShipment());
+        cs.setPlaceOfIssueName(sd.getAdditionalDetails().getPlaceOfIssue());
+        cs.setPlaceOfSupplyName(sd.getAdditionalDetails().getPlaceOfSupply());
+        cs.setPaidPlaceName(sd.getAdditionalDetails().getPaidPlace());
+        cs.setCIFValue(sd.getAdditionalDetails().getCIFValue());
+        cs.setCustom_DeclType(sd.getAdditionalDetails().getCustomDeclType());
     }
 
     private void mapShipmentServices(CustomShipmentSyncRequest cs, ShipmentDetails sd) {
@@ -269,42 +329,20 @@ public class ShipmentSync implements IShipmentSync {
         cs.setServicesList(res);
     }
 
-    private void mapRoutings(CustomShipmentSyncRequest cs, ShipmentDetails sd) {
-        if(sd.getRoutingsList() == null)
+    private void mapEvents(CustomShipmentSyncRequest cs, ShipmentDetails sd) {
+        if(sd.getEventsList() == null)
             return;
-        List<RoutingsRequestV2> res = sd.getRoutingsList().stream().map(
-                i -> {
-                    var routingsRequestV2 = modelMapper.map(i, RoutingsRequestV2.class);
-                    routingsRequestV2.setIsDomestic(i.isDomestic());
-                    return routingsRequestV2;
-                }
-        ).toList();
-        cs.setRoutings(res);
+        List<EventsRequestV2> res = sd.getEventsList().stream().filter(Objects::nonNull)
+                .map(i -> modelMapper.map(i, EventsRequestV2.class)).toList();
+        cs.setEventsList(res);
     }
-
-    private void mapContainers(CustomShipmentSyncRequest cs, ShipmentDetails sd) {
-        if(sd.getContainersList() == null)
-            return;
-        List<ContainerRequestV2> res = sd.getContainersList().stream().map(
-                i -> {
-                    var containerRequestV2 = modelMapper.map(i, ContainerRequestV2.class);
-                    containerRequestV2.setIsHazardous(i.getHazardous());
-                    containerRequestV2.setDgClassString(i.getDgClass());
-                    containerRequestV2.setMarksnNums(i.getMarksNums());
-                    containerRequestV2.setContainerStuffingLocationName(i.getContainerStuffingLocation());
-                    return containerRequestV2;
-                }
-        ).toList();
-        cs.setContainersList(res);
-    }
-
 
     private <T,P> List<P> convertToList(final List<T> lst, Class<P> clazz) {
         if(lst == null)
             return null;
         return  lst.stream()
                 .map(item -> convertToClass(item, clazz))
-                .collect(Collectors.toList());
+                .toList();
     }
     private  <T,P> P convertToClass(T obj, Class<P> clazz) {
         return modelMapper.map(obj, clazz);
